connection to db, 1. trial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/econsimdb
-spring.datasource.username=userNWA
-spring.datasource.password=deaJdT4GDGwRy517
+spring.data.mongodb.uri=mongodb://{$MONGODB_USER}:{$MONGODB_PASSWORD}@127.0.0.1:27017
