--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.data.mongodb.uri=mongodb://{$MONGODB_USER}:{$MONGODB_PASSWORD}@127.0.0.1:27017
+
+spring.datasource.url = jdbc:mysql://localhost:3306/econsim?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = econsim
+spring.datasource.password = fghj
+
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web.method.support=WARN
+logging.level.root=WARN
+logging.level.org.hibernate=WARN
+
+logging.level.info.econsim=DEBUG
