--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/econsim?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql:mysql1-kolibaga.b542.starter-us-east-2a.openshiftapps.com:3306/econsim?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username = econsim
 spring.datasource.password = fghj
 
