--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>mysql</groupId> -->
+<!--             <artifactId>mysql-connector-java</artifactId> -->
+<!--         </dependency> -->
+ 		<dependency> 
+ 			<groupId>com.h2database</groupId> 
+ 			<artifactId>h2</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
