--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 
-spring.datasource.url = jdbc:mysql:mysql1-kolibaga.b542.starter-us-east-2a.openshiftapps.com:3306/econsim?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = econsim
-spring.datasource.password = fghj
+#spring.datasource.url = jdbc:mysql:mysql1-kolibaga.b542.starter-us-east-2a.openshiftapps.com:3306/econsim?useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username = econsim
+#spring.datasource.password = fghj
+# H2 
+spring.h2.console.enabled=true 
+spring.h2.console.path=/h2 
+# Datasource 
+spring.datasource.url=jdbc:h2:file:~/test 
+spring.datasource.username=sa 
+spring.datasource.password= 
+spring.datasource.driver-class-name=org.h2.Driver
 
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.web.method.support=WARN
